Add goal-based KPI progress bars and configuration

--- a/core/tests/snapshots/verified_expenses_card.html
+++ b/core/tests/snapshots/verified_expenses_card.html
@@ -8,7 +8,7 @@
         <h4 class="card-text kpi-value mb-0" id="verified-expenses">0.00%</h4>
         <small class="text-muted kpi-subtitle">Share of total expenses</small>
       </div>
-      <i class="fas fa-receipt fa-2x text-info opacity-25"></i>
+      <button class="btn btn-sm btn-link p-0 kpi-config-btn" data-kpi-key="verified_expenses_pct" data-kpi-mode="higher" aria-label="Configure Verified Expenses">⚙️</button>
     </div>
     <div class="progress kpi-progress mt-2 progress-xthin">
       <div class="progress-bar bg-info w-0" id="verified-progress"></div>
